updated ul formatting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
+    <meta charset='UTF-8'/>
     <title>We Love S&G</title>
+    <link rel='stylesheet' href='CSS.css'/>
   </head>
   <body>
     <ul>
