--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <title>We Love S&G</title>
     <link rel='stylesheet' href='CSS.css'/>
   </head>
-  <body>
+
+    <h1>The Lyrics of Simon and Garfunkel</h1>
+
     <ul>
       <li><p><a href='wednesday-morning.html'>Wednesday Morning, 3 A.M.</a><p>
       <li><p><a href='flowers-never-bend.html'>Flowers Never Bend with the Rainfall</a><p>
       <li><p><a href='poem-underground-wall.html'>A Poem On the Underground Wall</a><p>
     </ul>
+
+    <p class = 'biography'>Simon and Garfunkel are an American folk-rock duo consisting of
+      singer-songwriter Paul Simon and singer Art Garfunkel. Considered one of
+      the best-selling artists of the 1960s, Simon and Garfunkel met in
+      elementary school in Queens, New York in 1953 where they began writing
+      material. The pair had their first minor success as teenagers under the
+      "Tom and Jerry". Over the course of their career, Simon and Garfunkel won 10 Grammy
+      Awards and drew one of the largest concert attendances in histroy at over
+      500,000 people.</p>
+
+      <img src='parsley-thyme.jpeg' class='center'/>
+
+      <p class = 'biography'>This site lists three of my favorite Simon and Garfunkel
+      songs and their lyrics.</p>
 
   </body>
 </html>
