--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
   <head>
     <meta charset='UTF-8'/>
     <title>We Love S&G</title>
-    <link rel='stylesheet' href='CSS.css'/>
+    <link rel='stylesheet' href='styles.css'/>
   </head>
+  <body>
+    <div class='menu-container'>
+      <div class='menu'>
+        <div class = 'active'><a href='index.html'>Menu</a></div>
+        <div class = 'Poem'><a href='poem-underground-wall.html'>A Poem on the Underground Wall</a></div>
+        <div class = 'Wednesday'><a href='wednesday-morning.html'>Wednesday Morning, 3 A.M.</a></div>
+        <div class = 'Flowers'><a href='flowers-never-bend.html'>Flowers Never Bend with the Rainfall</a></div>
+      </div>
+    </div>
 
-    <h1>The Lyrics of Simon and Garfunkel</h1>
+    <div class='header-container'>
+      <div class='header'>
+        <div class='logo'><img src='images/S&G Logo.jpeg'/></div>
+      </div>
+    </div>
 
-    <ul>
-      <li><p><a href='wednesday-morning.html'>Wednesday Morning, 3 A.M.</a><p>
-      <li><p><a href='flowers-never-bend.html'>Flowers Never Bend with the Rainfall</a><p>
-      <li><p><a href='poem-underground-wall.html'>A Poem On the Underground Wall</a><p>
-    </ul>
+    <div class='menu-container'>
+      <div class='synopsis'>
+          <div><p>Simon and Garfunkel are an American folk-rock duo consisting of
+          singer-songwriter Paul Simon and singer Art Garfunkel. Considered one of
+          the best-selling artists of the 1960s, Simon and Garfunkel met in
+          elementary school in Queens, New York in 1953 where they began writing
+          material. The pair had their first minor success as teenagers under the
+          "Tom and Jerry". Over the course of their career, Simon and Garfunkel won 10 Grammy
+          Awards and drew one of the largest concert attendances in histroy at over
+          500,000 people.</p>
+          </br>
+          </br>
+          <p>This site links to my favorite Simon and Garfunkel titles and lyrics.</p></div>
+      </div>
+    </div>
 
-    <p class = 'biography'>Simon and Garfunkel are an American folk-rock duo consisting of
-      singer-songwriter Paul Simon and singer Art Garfunkel. Considered one of
-      the best-selling artists of the 1960s, Simon and Garfunkel met in
-      elementary school in Queens, New York in 1953 where they began writing
-      material. The pair had their first minor success as teenagers under the
-      "Tom and Jerry". Over the course of their career, Simon and Garfunkel won 10 Grammy
-      Awards and drew one of the largest concert attendances in histroy at over
-      500,000 people.</p>
-
-      <img src='parsley-thyme.jpeg' class='center'/>
-
-      <p class = 'biography'>This site lists three of my favorite Simon and Garfunkel
-      songs and their lyrics.</p>
-
+    <img src='images/parsley-thyme.jpeg'/>
+    <img src='images/bookends.jpeg'/>
+    <img src='images/old-friends.jpeg'/>
+    <img src='images/wednesday-morning.jpeg'/>
+    <img src='images/bridge-over.jpeg'/>
   </body>
 </html>
