responsive design update

--- a/index.html
+++ b/index.html
@@ -37,10 +37,24 @@
       </div>
     </div>
 
-    <img src='images/parsley-thyme.jpeg'/>
-    <img src='images/bookends.jpeg'/>
-    <img src='images/old-friends.jpeg'/>
-    <img src='images/wednesday-morning.jpeg'/>
-    <img src='images/bridge-over.jpeg'/>
+    <div class='photo-grid-container'>
+      <div class='photo-grid'>
+        <div class='photo-grid-item first-item'>
+          <img src='images/parsley-thyme.jpeg'/>
+        </div>
+        <div class='photo-grid-item'>
+          <img src='images/bookends.jpeg'/>
+        </div>
+        <div class='photo-grid-item'>
+          <img src='images/old-friends.jpeg'/>
+        </div>
+        <div class='photo-grid-item'>
+          <img src='images/wednesday-morning.jpeg'/>
+        </div>
+        <div class='photo-grid-item'>
+          <img src='images/bridge-over.jpeg'/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
